--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/bootstrap-icons.min.css" id="bootstrap-icons">
+<!--    <link rel="stylesheet" href="/css/air-datepicker.css">-->
     <script src="/js/popper.min.js" defer></script>
     <script src="/js/bootstrap.min.js" defer id="bootstrap"></script>
 </head>
